Data Table Pagination Mobile View Style Fixed

--- a/projects/ornamentum/src/styles/themes/data-table/base.theme.scss
+++ b/projects/ornamentum/src/styles/themes/data-table/base.theme.scss
@@ -677,6 +677,10 @@
     @include font-size(.7, 1.4);
     @include justify-content(space-between);
 
+    &.sm-controllers {
+      width: 100%;
+    }
+
     .ng-data-table-pagination-limit {
       margin-right: 2.5rem;
 
